--- a/modes/world2/config/world2.yaml
+++ b/modes/world2/config/world2.yaml
@@ -3,189 +3,65 @@ mode:
     start_events: award_world2
     stop_events: world2_completed
     priority: 500
-    #code: world1.World1
 
 
 
 variable_player:
-  logicblock_w2_earth_counter_updated:
-    w2_earth_counter_count:
-      int: value
+  #setup environment variables
+  mode_world1_started:  
+    #World Settings
+    world_id:
+      int: 2
       action: set
-  logicblock_w2_stone_counter_updated:
-    w2_stone_counter_count:
-      int: value
+    world_name: 
+      string: "World 2"
       action: set
-  logicblock_w2_wood_counter_updated:
-    w2_wood_counter_count:
-      int: value
-      action: set
-  logicblock_w2_ore_counter_updated:
-    w2_ore_counter_count:
-      int: value
+    world_color: 
+      string: "YELLOW"
       action: set
 
-event_player:
-  itemcheckcomplete{device.counters.w2_earth_counter.value == 0 and device.counters.w2_stone_counter.value == 0 and device.counters.w2_wood_counter.value == 0 and device.counters.w2_ore_counter.value == 0}:
-    world2_completed
+    #Item 1 Settings
+    world_item1_name:
+      string: "Sand"
+      action: set 
+    world_item1_color:
+      string: "Yellow"
+      action: set 
+    world_item1_needed:
+      int: 2
+      action: set
 
-counters:
-  w2_earth_counter:
-    count_events: collectitem1_hit
-    reset_on_complete: False
-    starting_count: 4
-    count_complete_value: 0
-    direction: down
-    persist_state: true
-    events_when_complete: itemcheckcomplete
-  w2_stone_counter:
-    count_events: collectitem2_hit
-    reset_on_complete: False
-    starting_count: 4
-    count_complete_value: 0
-    direction: down
-    persist_state: true
-    events_when_complete: itemcheckcomplete
-  w2_wood_counter:
-    count_events: collectitem4_hit
-    reset_on_complete: False
-    starting_count: 4
-    count_complete_value: 0
-    direction: down
-    persist_state: true
-    events_when_complete: itemcheckcomplete
-  w2_ore_counter:
-    count_events: collectitem5_hit
-    reset_on_complete: False
-    starting_count: 4
-    count_complete_value: 0
-    direction: down
-    persist_state: true
-    events_when_complete: itemcheckcomplete
+    #Item 2 Settings
+    world_item2_name:
+      string: "Stone"
+      action: set 
+    world_item2_color:
+      string: "GRAY"
+      action: set 
+    world_item2_needed:
+      int: 2
+      action: set
 
-light_player:
- mode_world2_started:
-    l_collectitem1: YELLOW
-    l_collectitem2: GRAY
-    #l_collectitem3: RED
-    l_collectitem4: BROWN
-    l_collectitem5: SLATEGRAY
+    #Item 3 Settings
+    world_item3_name:
+      string: "Ore"
+      action: set 
+    world_item3_color:
+      string: "BROWN"
+      action: set 
+    world_item3_needed:
+      int: 2
+      action: set
+
+    #Item 4 Settings
+    world_item4_name:
+      string: "Wood"
+      action: set 
+    world_item4_color:
+      string: "SLATEGRAY"
+      action: set 
+    world_item4_needed:
+      int: 2
+      action: set
   
-#play hurry up sound effect
-sound_player:
-  mode_world2_started:
-    basemode_music:
-      action: stop
-    world2mode_music:
-      action: play
-      loops: -1
-      mode_end_action: stop 
-
-slides:
-  slide_world2:
-    priority: 100
-    widgets:
-      - type: text
-        text: (score)
-        number_grouping: true
-        min_digits: 2
-        font_name: lazer84
-        font_size: 100
-      - type: text
-        text: "World 2"
-        font_name: lazer84
-        font_size: 50
-        y: 200
-        anchor_x: center
-        anchor_y: bottom
-      - type: text
-        text: PLAYER (number)
-        y: 10
-        x: 10
-        font_name: lazer84
-        font_size: 50
-        anchor_x: left
-        anchor_y: bottom
-      - type: text
-        text: BALL (ball)
-        y: 10
-        x: right-10
-        anchor_x: right
-        anchor_y: bottom
-        font_name: lazer84
-        font_size: 50
-
-      - type: text
-        text: Sand
-        anchor_y: bottom
-        anchor_x: middle
-        y: 75
-        x: center-300
-        font_name: Arial
-        font_size: 40
-      - type: text
-        text: (player|w2_earth_counter_count)
-        anchor_y: bottom
-        anchor_x: middle
-        y: 125
-        x: center-300
-        font_name: Arial
-        font_size: 40
-
-      - type: text
-        text: Cobble
-        anchor_y: bottom
-        anchor_x: middle
-        y: 75
-        x: center-150
-        font_name: Arial
-        font_size: 40
-      - type: text
-        text: (player|w2_stone_counter_count)
-        anchor_y: bottom
-        anchor_x: middle
-        y: 125
-        x: center-150
-        font_name: Arial
-        font_size: 40
-
-      - type: text
-        text: Wood
-        anchor_y: bottom
-        anchor_x: middle
-        y: 75
-        x: center
-        font_name: Arial
-        font_size: 40
-      - type: text
-        text: (player|w2_wood_counter_count)
-        anchor_y: bottom
-        anchor_x: middle
-        y: 125
-        x: center
-        font_name: Arial
-        font_size: 40
-
-      - type: text
-        text: Iron
-        anchor_y: bottom
-        anchor_x: middle
-        y: 75
-        x: center+150
-        font_name: Arial
-        font_size: 40
-      - type: text
-        text: (player|w2_ore_counter_count)
-        anchor_y: bottom
-        anchor_x: middle
-        y: 125
-        x: center+150
-        font_name: Arial
-        font_size: 40
-      - type: image
-        image: pincraft_logo
-
-slide_player:
-  mode_world2_started: slide_world2
-
 
