--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1299,6 +1299,10 @@ modes:
   - worldcontroller
   - world1
   - world2
+  - world3
+  - world4
+  - world5
+  - world6
   - bonus
  # - nighthurryup
  # - night
