--- a/modes/world5/config/world5.yaml
+++ b/modes/world5/config/world5.yaml
@@ -1,34 +1,34 @@
 #config_version=5
 mode:
-    start_events: award_world2
-    stop_events: world2_completed
+    start_events: award_world5
+    stop_events: world5_completed
     priority: 500
 
 
 
 variable_player:
   #setup environment variables
-  mode_world2_started:  
+  mode_world5_started:  
     #World Settings
     world_id:
-      int: 2
+      int: 5
       action: set
     world_name: 
-      string: "World 2"
+      string: "World 5"
       action: set
     world_color: 
-      string: "YELLOW"
+      string: "RED"
       action: set
 
     #Item 1 Settings
     world_item1_name:
-      string: "Sand"
+      string: "Dirt"
       action: set 
     world_item1_color:
-      string: "Yellow"
+      string: "GREEN"
       action: set 
     world_item1_needed:
-      int: 4
+      int: 32
       action: set
 
     #Item 2 Settings
@@ -39,7 +39,7 @@ variable_player:
       string: "GRAY"
       action: set 
     world_item2_needed:
-      int: 4
+      int: 32
       action: set
 
     #Item 3 Settings
@@ -50,7 +50,7 @@ variable_player:
       string: "BROWN"
       action: set 
     world_item3_needed:
-      int: 4
+      int: 32
       action: set
 
     #Item 4 Settings
@@ -61,9 +61,10 @@ variable_player:
       string: "SLATEGRAY"
       action: set 
     world_item4_needed:
-      int: 4
+      int: 32
       action: set
   
+
 event_player:
-  mode_world2_started:
+  mode_world5_started:
     world_started
