--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,11 +1,13 @@
 events:
   game_ended: 12
-  game_started: 98
+  game_started: 115
 player:
   score:
-    average: 381921.4285714286
+    average: 454606.25
     top:
     - 1433200
+    - 1120950
+    - 963400
     - 962000
     - 597850
     - 555350
@@ -13,72 +15,70 @@ player:
     - 338900
     - 298800
     - 258000
-    - 210000
-    - 206400
-    total: 14
+    total: 16
 shots:
-  captiveball: 7
-  centertarget: 324
-  collectitem1: 817
-  collectitem2: 737
-  collectitem3: 212
-  collectitem4: 654
-  collectitem5: 629
-  leftslingshot: 218
-  popbumper1: 117
-  popbumper2: 143
-  popbumper3: 206
-  rightslingshot: 111
-  skill_scoup: 54
-  spinner: 293
+  captiveball: 11
+  centertarget: 399
+  collectitem1: 992
+  collectitem2: 904
+  collectitem3: 248
+  collectitem4: 820
+  collectitem5: 794
+  leftslingshot: 447
+  popbumper1: 173
+  popbumper2: 212
+  popbumper3: 308
+  rightslingshot: 142
+  skill_scoup: 65
+  spinner: 359
 switches:
-  s_bumperrail: 66
-  s_captiveball: 7
-  s_centertarget: 359
-  s_collectitem1: 849
-  s_collectitem2: 762
-  s_collectitem3: 217
-  s_collectitem4: 674
-  s_collectitem5: 653
+  s_bumperrail: 83
+  s_captiveball: 11
+  s_centertarget: 434
+  s_collectitem1: 1033
+  s_collectitem2: 932
+  s_collectitem3: 255
+  s_collectitem4: 845
+  s_collectitem5: 824
   s_credit_right: 0
-  s_drop1: 158
-  s_drop2: 242
-  s_drop3: 836
-  s_drop4: 149
-  s_drop5: 387
-  s_drop6: 190
-  s_left_flipper: 824
-  s_leftinlane: 15
-  s_leftoutlane: 75
-  s_leftsling: 218
-  s_loopleft: 37
-  s_loopright: 53
+  s_drop1: 187
+  s_drop2: 289
+  s_drop3: 940
+  s_drop4: 178
+  s_drop5: 467
+  s_drop6: 234
+  s_left_flipper: 1103
+  s_leftinlane: 19
+  s_leftoutlane: 83
+  s_leftsling: 447
+  s_loopleft: 52
+  s_loopright: 62
   s_maint: 0
-  s_plungerlane: 232
-  s_popbumper1: 117
-  s_popbumper2: 143
-  s_popbumper3: 206
-  s_right_flipper: 740
+  s_plungerlane: 268
+  s_popbumper1: 173
+  s_popbumper2: 212
+  s_popbumper3: 308
+  s_right_flipper: 975
   s_rightinlane: 0
-  s_rightoutlane: 38
-  s_rightsling: 111
-  s_scoup: 114
-  s_spinner: 293
-  s_start: 6
+  s_rightoutlane: 40
+  s_rightsling: 142
+  s_scoup: 138
+  s_spinner: 359
+  s_start: 7
   s_tilt: 0
-  s_tooltarget1: 34
-  s_tooltarget2: 49
-  s_tooltarget3: 31
-  s_topbumperleft: 37
-  s_topbumperright: 64
-  s_topkicker: 134
-  s_trough1: 163
-  s_trough2: 151
-  s_trough3: 159
-  s_trough4: 103
-  s_troughjam: 149
+  s_tooltarget1: 47
+  s_tooltarget2: 66
+  s_tooltarget3: 44
+  s_topbumperleft: 43
+  s_topbumperright: 82
+  s_topkicker: 202
+  s_trough1: 198
+  s_trough2: 181
+  s_trough3: 189
+  s_trough4: 117
+  s_troughjam: 179
   s_upperdrop: 0
-  s_whitedot1: 14
-  s_whitedot2: 23
-  s_whitedot3: 21
-  s_whitedot4: 27
+  s_whitedot1: 19
+  s_whitedot2: 28
+  s_whitedot3: 26
+  s_whitedot4: 29
