--- a/modes/world1/config/world1.yaml
+++ b/modes/world1/config/world1.yaml
@@ -4,7 +4,11 @@ mode:
     stop_events: world1_completed
     priority: 500
 
-
+show_player:
+  mode_world1_started:  #Setup GI Light Show
+    show_world1gi:
+      loops: -1
+      speed: 1
 
 variable_player:
   #setup environment variables
