--- a/modes/worldcontroller/config/worldcontroller.yaml
+++ b/modes/worldcontroller/config/worldcontroller.yaml
@@ -147,6 +147,17 @@ slides:
     priority: 100
     widgets:
       - type: text        #PLAYER 1 SCORE
+        text: MB - (player|multiplier_mb)x
+        number_grouping: true
+        min_digits: 2
+        font_name: ARLRDBD
+        font_size: 25
+        y: top-50
+        x: right-100
+        z: 100
+        anchor_x: left
+        anchor_y: top
+      - type: text        #PLAYER 1 SCORE
         text: PLAYER 1 - (player1|score)
         number_grouping: true
         min_digits: 2
